--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -58,6 +58,11 @@
   "published_on": "प्रकाशित तिथि",
   "category": "श्रेणी",
   "latest_news": "ताज़ा खबरें",
+  "all": "सभी",
+    "product launch": "उत्पाद लॉन्च",
+    "industry news": "उद्योग समाचार",
+    "company updates": "कंपनी अपडेट",
+    "events": "इवेंट्स",
 
   "view_details": "विवरण देखें",
     "latest_products": "नवीनतम उत्पाद",
