--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -58,6 +58,11 @@
   "published_on": "Publicado em",
   "category": "Categoria",
   "latest_news": "Últimas notícias",
+  "all": "Todos",
+    "product launch": "Lançamento de produto",
+    "industry news": "Notícias da indústria",
+    "company updates": "Atualizações da empresa",
+    "events": "Eventos",
 
    "view_details": "Ver detalhes",
     "latest_products": "Últimos produtos",
