--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -30,7 +30,7 @@
   
 
   "email_us": "راسلنا عبر البريد الإلكتروني",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "ساعات العمل",
   "monday_friday": "الاثنين - الجمعة",
