--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,7 @@
   "contact_info_description": "Feel free to reach out to us through any of the following channels. We are here to assist you.",
 
   "visit_us": "Visit Us",
-  "address": "Unit 1207, Building 1, No. 288, Zhuhai East Road, Jiaonan City, Qingdao",
+  "address": "Unit 1207, Building 1, No. 288, Zhuhai East Road, Jiaonan City, Qingdao, Shandong Province, P. R. China",
 
   "call_us": "Call Us",
   "phone1": "+8617864268032",
@@ -27,7 +27,7 @@
   "scan_qr_to_chat": "Scan QR to chat",
 
   "email_us": "Email Us",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Operating Hours",
   "monday_friday": "Monday - Friday",
