--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -15,7 +15,7 @@
   "contact_info_description": "No dudes en comunicarte con nosotros a través de cualquiera de los siguientes canales. Estamos aquí para ayudarte.",
 
   "visit_us": "Visítanos",
-  "address": "Unidad 1207, Edificio 1, No. 288, Zhuhai East Road, Ciudad de Jiaonan, Qingdao",
+  "address": "Unidad 1207, Edificio 1, No. 288, Zhuhai East Road, Ciudad de Jiaonan, Qingdao, Shandong Province, P. R. China",
 
   "call_us": "Llámanos",
   "phone1": "+8617864268032",
@@ -31,7 +31,7 @@
   
 
   "email_us": "Envíanos un Correo",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Horario de Atención",
   "monday_friday": "Lunes - Viernes",
