--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -15,7 +15,7 @@
   "contact_info_description": "N'hésitez pas à nous contacter via l'un des canaux suivants. Nous sommes là pour vous aider.",
 
   "visit_us": "Visitez-nous",
-  "address": "Unité 1207, Bâtiment 1, No. 288, Zhuhai East Road, Ville de Jiaonan, Qingdao",
+  "address": "Unité 1207, Bâtiment 1, No. 288, Zhuhai East Road, Ville de Jiaonan, Qingdao, Shandong Province, P. R. China",
 
   "call_us": "Appelez-nous",
   "phone1": "+8617864268032",
@@ -30,7 +30,7 @@
   
 
   "email_us": "Envoyez-nous un e-mail",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Horaires d'ouverture",
   "monday_friday": "Lundi - Vendredi",
