--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -30,7 +30,7 @@
   
 
   "email_us": "हमें ईमेल करें",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "काम करने के घंटे",
   "monday_friday": "सोमवार - शुक्रवार",
