--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -30,7 +30,7 @@
   
 
   "email_us": "メールでお問い合わせ",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "営業時間",
   "monday_friday": "月曜日 - 金曜日",
