--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -15,7 +15,7 @@
   "contact_info_description": "Fique à vontade para nos contatar através dos seguintes canais. Estamos à disposição.",
 
   "visit_us": "Visite-nos",
-  "address": "Unidade 1207, Edifício 1, No. 288, Zhuhai East Road, Cidade de Jiaonan, Qingdao",
+  "address": "Unidade 1207, Edifício 1, No. 288, Zhuhai East Road, Cidade de Jiaonan, Qingdao, Shandong Province, P. R. China",
 
   "call_us": "Ligue para nós",
   "phone1": "+8617864268032",
@@ -30,7 +30,7 @@
   
 
   "email_us": "Envie-nos um e-mail",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Horário de Funcionamento",
   "monday_friday": "Segunda - Sexta",
