--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -30,7 +30,7 @@
   
 
   "email_us": "Напишите нам",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Часы работы",
   "monday_friday": "Понедельник - Пятница",
