--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -15,7 +15,7 @@
   "contact_info_description": "Zögern Sie nicht, uns über die folgenden Kanäle zu kontaktieren. Wir sind für Sie da.",
 
   "visit_us": "Besuchen Sie uns",
-  "address": "Einheit 1207, Gebäude 1, Nr. 288, Zhuhai East Road, Jiaonan City, Qingdao",
+  "address": "Einheit 1207, Gebäude 1, Nr. 288, Zhuhai East Road, Jiaonan City, Qingdao, Shandong Province, P. R. China",
 
   "call_us": "Rufen Sie uns an",
   "phone1": "+8617864268032",
@@ -30,7 +30,7 @@
   
 
   "email_us": "Schreiben Sie uns eine E-Mail",
-  "email": "13061287760@163.com",
+  "email": "fortune@automotorcade.com, sales01@automotorcade.com",
 
   "operating_hours": "Öffnungszeiten",
   "monday_friday": "Montag - Freitag",
